feat: base admin layout

--- a/apps/admin/src/app.html
+++ b/apps/admin/src/app.html
@@ -7,7 +7,7 @@
     %sveltekit.head%
   </head>
 
-  <body class="overflow-y-scroll scrollbar">
+  <body class="overflow-y-scroll custom-scrollbar">
     <div>%sveltekit.body%</div>
   </body>
 </html>
